# locality-alignment

./: .gitignore  README.md  pyproject.toml
configs/: beit-vit-b.yaml  beitv2-vit-b.yaml  clip-vit-b-in1k-e10.yaml  clip-vit-b-in1k-e100.yaml  clip-vit-b-in1k-e2.yaml  clip-vit-b-in1k-e25.yaml  clip-vit-b-in1k-e50.yaml  clip-vit-b-in21k-e1.yaml  clip-vit-b-in21k-e10.yaml  clip-vit-b-in21k-e5.yaml  clip-vit-b-mim-aligned-mim.yaml  clip-vit-b-mim-aligned.yaml  clip-vit-b-mim.yaml  clip-vit-b.yaml  clip-vit-l-336.yaml  clip-vit-l.yaml  dfn-vit-b.yaml  dino-vit-b.yaml  dinov2-vit-b.yaml  eva02-vit-b.yaml  in1k-vit-b-autoaug.yaml  in1k-vit-b-bernoulli25.yaml  in1k-vit-b-bernoulli50.yaml  in1k-vit-b-bernoulli75.yaml  in1k-vit-b-block.yaml  in1k-vit-b-cls.yaml  in1k-vit-b-cosine.yaml  in1k-vit-b-cutmix.yaml  in1k-vit-b-e10.yaml  in1k-vit-b-e100.yaml  in1k-vit-b-e2.yaml  in1k-vit-b-e50.yaml  in1k-vit-b-embed-final.yaml  in1k-vit-b-embed.yaml  in1k-vit-b-in21k-e1.yaml  in1k-vit-b-in21k-e10.yaml  in1k-vit-b-in21k-e5.yaml  in1k-vit-b-mixup.yaml  in1k-vit-b-uniform-antithetical.yaml  in1k-vit-b-uniform.yaml  (+10 more)
configs-ft/: clip-vit-b-aligned.yaml  clip-vit-b.yaml  clip-vit-l-336-aligned.yaml  clip-vit-l-336.yaml  clip-vit-l-aligned.yaml  clip-vit-l.yaml
configs-mim/: clip-vit-b-mim-aligned.yaml  clip-vit-b.yaml
locality_alignment/: __init__.py  loss_utils.py  model_utils.py  student_utils.py  teacher_utils.py  train_utils.py
locality_alignment/backbones/: __init__.py  dbot.py  dbot_clip.py  dbot_random.py  moco.py  svit.py
scripts/: finetune.py  mim.py  train.py
