[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "locality-alignment"
authors = [
    { name = "Ian Covert", email = "icovert@stanford.edu" },
]
description = "Locality alignment for vision transformers"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "timm>=1.0.8",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "wandb>=0.17.8",
]

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "ruff",
]

[tool.setuptools]
packages = ["locality_alignment"]

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310"]

[tool.ruff]
line-length = 120
target-version = "py38"
